--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Nihad's World!</title>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -11,7 +12,7 @@
     <tr>
       <td><img src="Nihad.png" alt="Nihad's profile picture!" width="150" height="150"></td>
       <td>
-        <h1>NIHAD ADNAN SHAH</h1>
+        <h1 id="nash">NIHAD ADNAN SHAH</h1>
         <p>
           <em>Student</em><br>
           <em>Department of Computer science and engineering</em><br>
@@ -21,7 +22,7 @@
     </tr>
   </table>
   <p>I want to be a software engineer.Really enjoy learning new things and connecting with people.</p>
-  <hr size="1" noshade>
+  <hr>
   <h3><em><strong>Educational Background:</strong></em></h3>
   <ul>
     <li><a href="https://www.facebook.com/Carmichael-College-Govt-Primary-School-Rangpur-406404712889887/">Carmichael College Govt. Primary School and College,Rangpur</a>
@@ -59,7 +60,7 @@
       </ol>
     </li>
   </ul>
-  <hr size="1" noshade>
+  <hr>
   <h3><em><strong>Educational Qualifications:</strong></em></h3>
   <table cellspacing="10">
     <thead>
@@ -92,7 +93,7 @@
     </tbody>
     </thead>
   </table>
-  <hr size="1" noshade>
+  <hr>
   <h3><em><strong>Skills:</strong></em></h3>
   <table cellspacing="10">
     <tr>
@@ -130,7 +131,7 @@
       </td>
     </tr>
   </table>
-  <hr size="1" noshade>
+  <hr>
   <a href="hobbies.html"><em><strong>My Hobbies!</strong></em></a><br>
   <a href="contacts.html"><em><strong>My Contacts!</strong></em></a>
 </body>
