--- a/contacts.html
+++ b/contacts.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>My Contacts!</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3>My Contacts:</h3>
     <p><a href="https://www.facebook.com/nihad.adnan.shah">Facebook</a></p>
     <p>Phone:01935831686</p>
     <p>gmail:nihad08adnan@gmail.com</p>
-    <hr size="1" noshade>
+    <hr>
     <form action="mailto:jocr2410@gmail.com" method="post" enctype="text/plain">
       <label for="">Your Name:</label>
       <input type="text" name="yourName" value=""><br>
